...
            "state": "translated",
            "value": "账户"
          }
        }
      }
    },
    "Accounts": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "账户"
          }
...
            "state": "translated",
            "value": "当前账本"
          }
        }
      }
    },
    "Activity": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "动态"
          }
...
            "state": "translated",
            "value": "全部"
          }
        }
      }
    },
    "All Transactions": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "全部交易"
          }
...
            "state": "translated",
            "value": "平均"
          }
        }
      }
    },
    "Back": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "返回"
          }
...
            "state": "translated",
            "value": "预算提醒"
          }
        }
      }
    },
    "Budgets": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "预算"
          }
...
            "state": "translated",
            "value": "已展开"
          }
        }
      }
    },
    "Expense": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "支出"
          }
...
            "state": "translated",
            "value": "目前没有可与 %@ 合并的商户。"
          }
        }
      }
    },
    "This cycle": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "本周期"
          }
...
            "state": "translated",
            "value": "交易总额"
          }
        }
      }
    },
    "Transactions": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "交易"
          }
...
